# Raincourse

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  excel.rs  lib.rs  main.rs  study.rs
src-tauri/src/ai/: client.rs  config.rs  encode.rs  font_decode.rs  mod.rs  quiz_runner.rs
src-tauri/src/api/: client.rs  jar.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: chapter.rs  course.rs  exam.rs  mod.rs  user.rs
src-tauri/src/session/: manager.rs
src-tauri/src/storage/: json_store.rs
src-tauri/src/util/: crypto.rs  mod.rs  sanitize.rs
src-tauri/src/ws/: login.rs  mod.rs  ppt.rs
src/components/: Layout.tsx  PageHeader.tsx
src/routes/: About.tsx  AnswerFiles.tsx  AnswerPreview.tsx  CourseDetail.tsx  Dashboard.tsx  ExamExport.tsx  Login.tsx  Settings.tsx  StudyProgress.tsx
src/stores/: authStore.ts  courseStore.ts
src/types/: index.ts
src/utils/: errors.ts  responseGuards.ts  useTauriListens.ts
