[package]
name = "raincourse-v2"
version = "2.0.0"
description = "雨课堂助手 - Tauri v2"
authors = ["aglorice"]
edition = "2021"

[lib]
name = "raincourse_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
cookie_store = "0.21"
url = "2"
rust_xlsxwriter = "0.82"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
