[package]
name = "raincourse-v2"
version = "2.1.3"
description = "雨课堂助手 - Tauri v2"
authors = ["aglorice"]
edition = "2021"

[lib]
name = "raincourse_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
cookie_store = "0.21"
url = "2"
rust_xlsxwriter = "0.82"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
# 会话凭据加密（AES-256-GCM + SHA-256 派生 key）
aes-gcm = "0.10"
sha2 = "0.10"
hostname = "0.4"
parking_lot = "0.12"
# 运行时字形栅格化：下载雨课堂动态加密字体后与内嵌思源黑体比对解混淆
fontdue = "0.9"
